# fastnoise-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
benches/: noise_benchmarks.rs
src/: fractal.rs  hash.rs  kernel.rs  lib.rs  noise.rs  perturb.rs  settings.rs  vectorset.rs
src/simd/: avx2.rs  avx512.rs  mod.rs  neon.rs  scalar.rs  sse2.rs  sse41.rs
