[package]
name = "fast-noise-simd-rs"
version = "0.1.0"
edition = "2021"
description = "Zero-dependency Rust port of FastNoiseSIMD – fast SIMD-accelerated coherent noise generation (Value, Perlin, Simplex, Cubic, WhiteNoise, Cellular/Voronoi)"
license = "MIT"
repository = "https://github.com/Auburn/FastNoiseSIMD"
keywords = ["noise", "simd", "perlin", "simplex", "procedural"]
categories = ["algorithms", "game-development", "science"]

[features]
default = []
# Compile with specific SIMD instruction sets
# Runtime detection will pick the best available level
sse2 = []
sse41 = []
avx2 = []
avx512 = []
neon = []
# Use FMA instructions for higher precision (minute output differences vs non-FMA)
fma = []
# Use aligned memory allocation for noise sets (requires nightly or extern crate)
aligned-sets = []

[dev-dependencies]
# Used for benchmark comparisons
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "noise_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1